--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -1,6 +1,6 @@
 {{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }}
 
-{{ $location_path := coalesce $.Env.LOCATION_PATH "/" }}
+{{ $default_location_path := coalesce $.Env.LOCATION_PATH "/" }}
 {{ $external_http_port := coalesce $.Env.HTTP_PORT "80" }}
 {{ $external_https_port := coalesce $.Env.HTTPS_PORT "443" }}
 
@@ -225,6 +225,9 @@ upstream {{ $upstream_name }} {
 
 {{/* Get the VIRTUAL_ROOT By containers w/ use fastcgi root */}}
 {{ $vhost_root := or (first (groupByKeys $containers "Env.VIRTUAL_ROOT")) "/var/www/public" }}
+
+{{/* Get the LOCATION_PATH By containers */}}
+{{ $location_path := or (first (groupByKeys $containers "Env.LOCATION_PATH")) $default_location_path }}
 
 
 {{/* Get the first cert name defined by containers w/ the same vhost */}}
