--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -1,6 +1,7 @@
 {{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }}
 
 {{ $default_location_path := coalesce $.Env.LOCATION_PATH "/" }}
+{{ $default_server_options := coalesce $.Env.SERVER_OPTIONS "" }}
 {{ $external_http_port := coalesce $.Env.HTTP_PORT "80" }}
 {{ $external_https_port := coalesce $.Env.HTTPS_PORT "443" }}
 
@@ -9,11 +10,11 @@
 		{{/* If we got the containers from swarm and this container's port is published to host, use host IP:PORT */}}
 		{{ if and .Container.Node.ID .Address.HostPort }}
 			# {{ .Container.Node.Name }}/{{ .Container.Name }}
-			server {{ .Container.Node.Address.IP }}:{{ .Address.HostPort }};
+			server {{ .Container.Node.Address.IP }}:{{ .Address.HostPort }} {{.ServerOptions}};
 		{{/* If there is no swarm node or the port is not published on host, use container's IP:PORT */}}
 		{{ else if .Network }}
 			# {{ .Container.Name }}
-			server {{ (first (split .Container.Name "." )) }}:{{ .Address.Port }};
+			server {{ (first (split .Container.Name "." )) }}:{{ .Address.Port }} {{.ServerOptions}};
 		{{ end }}
 	{{ else if .Network }}
 		# {{ .Container.Name }}
@@ -184,17 +185,19 @@ upstream {{ $upstream_name }} {
 	{{ range $knownNetwork := $CurrentContainer.Networks }}
 		{{ range $containerNetwork := $container.Networks }}
 			{{ if (and (ne $containerNetwork.Name "ingress") (or (eq $knownNetwork.Name $containerNetwork.Name) (eq $knownNetwork.Name "host"))) }}
+				{{ $server_options := or (first (groupByKeys $containers "Env.SERVER_OPTIONS")) $default_server_options }}
+
 				## Can be connected with "{{ $containerNetwork.Name }}" network
 
 				{{/* If only 1 port exposed, use that */}}
 				{{ if eq $addrLen 1 }}
 					{{ $address := index $container.Addresses 0 }}
-					{{ template "upstream" (dict "Container" $container "Address" $address "Network" $containerNetwork) }}
+					{{ template "upstream" (dict "Container" $container "Address" $address "Network" $containerNetwork "ServerOptions" $server_options) }}
 				{{/* If more than one port exposed, use the one matching VIRTUAL_PORT env var, falling back to standard web port 80 */}}
 				{{ else }}
 					{{ $port := coalesce $container.Env.VIRTUAL_PORT "80" }}
 					{{ $address := where $container.Addresses "Port" $port | first }}
-					{{ template "upstream" (dict "Container" $container "Address" $address "Network" $containerNetwork) }}
+					{{ template "upstream" (dict "Container" $container "Address" $address "Network" $containerNetwork "ServerOptions" $server_options) }}
 				{{ end }}
 			{{ else }}
 				# Cannot connect to network of this container
@@ -228,7 +231,6 @@ upstream {{ $upstream_name }} {
 
 {{/* Get the LOCATION_PATH By containers */}}
 {{ $location_path := or (first (groupByKeys $containers "Env.LOCATION_PATH")) $default_location_path }}
-
 
 {{/* Get the first cert name defined by containers w/ the same vhost */}}
 {{ $certName := (first (groupByKeys $containers "Env.CERT_NAME")) }}
