--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -146,22 +146,34 @@ proxy_set_header Proxy "";
 server {
 	server_name _; # This is just an invalid value which will never trigger on a real hostname.
 	listen {{ $external_http_port }};
+
 	{{ if $enable_ipv6 }}
 	listen [::]:{{ $external_http_port }};
 	{{ end }}
+
+	{{ if (exists "/etc/nginx/vhost.d/catchall") }}
+	include /etc/nginx/vhost.d/catchall;
+	{{ else }}
 	{{ $access_log }}
 	return 503;
+	{{ end }}
 }
 
 {{ if (and (exists "/etc/nginx/certs/default.crt") (exists "/etc/nginx/certs/default.key")) }}
 server {
 	server_name _; # This is just an invalid value which will never trigger on a real hostname.
 	listen {{ $external_https_port }} ssl http2;
+
 	{{ if $enable_ipv6 }}
 	listen [::]:{{ $external_https_port }} ssl http2;
 	{{ end }}
+
+	{{ if (exists "/etc/nginx/vhost.d/catchall") }}
+	include /etc/nginx/vhost.d/catchall;
+	{{ else }}
 	{{ $access_log }}
 	return 503;
+	{{ end }}
 
 	ssl_session_cache shared:SSL:50m;
 	ssl_session_tickets off;
