--- a/app/nginx.tmpl
+++ b/app/nginx.tmpl
@@ -1,9 +1,10 @@
 {{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }}
 
-{{ $default_location_path := coalesce $.Env.LOCATION_PATH "/" }}
-{{ $default_server_options := coalesce $.Env.SERVER_OPTIONS "" }}
-{{ $external_http_port := coalesce $.Env.HTTP_PORT "80" }}
-{{ $external_https_port := coalesce $.Env.HTTPS_PORT "443" }}
+{{ $default_location_path := coalesce $CurrentContainer.Labels.LOCATION_PATH "/" }}
+{{ $default_server_options := coalesce $CurrentContainer.Labels.SERVER_OPTIONS "" }}
+{{ $default_cert_name := coalesce $CurrentContainer.Labels.CERT_NAME "" }}
+{{ $external_http_port := coalesce $CurrentContainer.Labels.HTTP_PORT "80" }}
+{{ $external_https_port := coalesce $CurrentContainer.Labels.HTTPS_PORT "443" }}
 
 {{ define "upstream" }}
 	{{ if .Address }}
@@ -117,11 +118,11 @@ log_format vhost '$host $remote_addr - $remote_user [$time_local] '
 access_log off;
 
 {{/* Get the SSL_POLICY defined by this container, falling back to "Mozilla-Intermediate" */}}
-{{ $ssl_policy := or ($.Env.SSL_POLICY) "Mozilla-Intermediate" }}
+{{ $ssl_policy := or ($CurrentContainer.Labels.SSL_POLICY) "Mozilla-Intermediate" }}
 {{ template "ssl_policy" (dict "ssl_policy" $ssl_policy) }}
 
-{{ if $.Env.RESOLVERS }}
-resolver {{ $.Env.RESOLVERS }};
+{{ if $CurrentContainer.Labels.RESOLVERS }}
+resolver {{ $CurrentContainer.Labels.RESOLVERS }};
 {{ end }}
 
 {{ if (exists "/etc/nginx/proxy.conf") }}
@@ -143,9 +144,9 @@ proxy_set_header X-Forwarded-Port $proxy_x_forwarded_port;
 proxy_set_header Proxy "";
 {{ end }}
 
-{{ $access_log := (or (and (not $.Env.DISABLE_ACCESS_LOGS) "access_log /var/log/nginx/access.log vhost;") "") }}
+{{ $access_log := (or (and (not $CurrentContainer.Labels.DISABLE_ACCESS_LOGS) "access_log /var/log/nginx/access.log vhost;") "") }}
 
-{{ $enable_ipv6 := eq (or ($.Env.ENABLE_IPV6) "") "true" }}
+{{ $enable_ipv6 := eq (or ($CurrentContainer.Labels.ENABLE_IPV6) "") "true" }}
 server {
 	server_name _; # This is just an invalid value which will never trigger on a real hostname.
 	listen {{ $external_http_port }};
@@ -185,7 +186,7 @@ server {
 }
 {{ end }}
 
-{{ range $host, $containers := groupByMulti $ "Env.VIRTUAL_HOST" "," }}
+{{ range $host, $containers := groupByMulti $ "Labels.VIRTUAL_HOST" "," }}
 
 {{ $host := trim $host }}
 {{ $is_regexp := hasPrefix "~" $host }}
@@ -200,7 +201,7 @@ upstream {{ $upstream_name }} {
 	{{ range $knownNetwork := $CurrentContainer.Networks }}
 		{{ range $containerNetwork := $container.Networks }}
 			{{ if (and (ne $containerNetwork.Name "ingress") (or (eq $knownNetwork.Name $containerNetwork.Name) (eq $knownNetwork.Name "host"))) }}
-				{{ $server_options := or (first (groupByKeys $containers "Env.SERVER_OPTIONS")) $default_server_options }}
+				{{ $server_options := or (first (groupByKeys $containers "Labels.SERVER_OPTIONS")) $default_server_options }}
 
 				## Can be connected with "{{ $containerNetwork.Name }}" network
 
@@ -210,7 +211,7 @@ upstream {{ $upstream_name }} {
 					{{ template "upstream" (dict "Container" $container "Address" $address "Network" $containerNetwork "ServerOptions" $server_options) }}
 				{{/* If more than one port exposed, use the one matching VIRTUAL_PORT env var, falling back to standard web port 80 */}}
 				{{ else }}
-					{{ $port := coalesce $container.Env.VIRTUAL_PORT "80" }}
+					{{ $port := coalesce $container.Labels.VIRTUAL_PORT "80" }}
 					{{ $address := where $container.Addresses "Port" $port | first }}
 					{{ template "upstream" (dict "Container" $container "Address" $address "Network" $containerNetwork "ServerOptions" $server_options) }}
 				{{ end }}
@@ -223,32 +224,32 @@ upstream {{ $upstream_name }} {
 {{ end }}
 }
 
-{{ $default_host := or ($.Env.DEFAULT_HOST) "" }}
+{{ $default_host := or ($CurrentContainer.Labels.DEFAULT_HOST) "" }}
 {{ $default_server := index (dict $host "" $default_host "default_server") $host }}
 
 {{/* Get the VIRTUAL_PROTO defined by containers w/ the same vhost, falling back to "http" */}}
-{{ $proto := trim (or (first (groupByKeys $containers "Env.VIRTUAL_PROTO")) "http") }}
+{{ $proto := trim (or (first (groupByKeys $containers "Labels.VIRTUAL_PROTO")) "http") }}
 
 {{/* Get the NETWORK_ACCESS defined by containers w/ the same vhost, falling back to "external" */}}
-{{ $network_tag := or (first (groupByKeys $containers "Env.NETWORK_ACCESS")) "external" }}
+{{ $network_tag := or (first (groupByKeys $containers "Labels.NETWORK_ACCESS")) "external" }}
 
 {{/* Get the HTTPS_METHOD defined by containers w/ the same vhost, falling back to "redirect" */}}
-{{ $https_method := or (first (groupByKeys $containers "Env.HTTPS_METHOD")) "redirect" }}
+{{ $https_method := or (first (groupByKeys $containers "Labels.HTTPS_METHOD")) "redirect" }}
 
 {{/* Get the SSL_POLICY defined by containers w/ the same vhost, falling back to empty string (use default) */}}
-{{ $ssl_policy := or (first (groupByKeys $containers "Env.SSL_POLICY")) "" }}
+{{ $ssl_policy := or (first (groupByKeys $containers "Labels.SSL_POLICY")) "" }}
 
 {{/* Get the HSTS defined by containers w/ the same vhost, falling back to "max-age=31536000" */}}
-{{ $hsts := or (first (groupByKeys $containers "Env.HSTS")) "max-age=31536000" }}
+{{ $hsts := or (first (groupByKeys $containers "Labels.HSTS")) "max-age=31536000" }}
 
 {{/* Get the VIRTUAL_ROOT By containers w/ use fastcgi root */}}
-{{ $vhost_root := or (first (groupByKeys $containers "Env.VIRTUAL_ROOT")) "/var/www/public" }}
+{{ $vhost_root := or (first (groupByKeys $containers "Labels.VIRTUAL_ROOT")) "/var/www/public" }}
 
 {{/* Get the LOCATION_PATH By containers */}}
-{{ $location_path := or (first (groupByKeys $containers "Env.LOCATION_PATH")) $default_location_path }}
+{{ $location_path := or (first (groupByKeys $containers "Labels.LOCATION_PATH")) $default_location_path }}
 
 {{/* Get the first cert name defined by containers w/ the same vhost */}}
-{{ $certName := (first (groupByKeys $containers "Env.CERT_NAME")) }}
+{{ $certName := or (first (groupByKeys $containers "Labels.CERT_NAME")) $default_cert_name }}
 
 {{/* Get the best matching cert  by name for the vhost. */}}
 {{ $vhostCert := (closest (dir "/etc/nginx/certs") (printf "%s.crt" $host))}}
