--- a/app/nginx.tmpl
+++ b/app/nginx.tmpl
@@ -255,7 +255,7 @@ upstream {{ $upstream_name }} {
 {{ $vhostCert := trimSuffix ".crt" $vhostCert }}
 {{ $vhostCert := trimSuffix ".key" $vhostCert }}
 
-{{ $cert := (coalesce $vhostCert $default_ssl_certname) }}
+{{ $cert := when (not (eq $vhostCert "")) $vhostCert $default_ssl_certname }}
 
 {{ $is_https := (and (ne $https_method "nohttps") (ne $cert "") (exists (printf "/etc/nginx/certs/%s.crt" $cert)) (exists (printf "/etc/nginx/certs/%s.key" $cert))) }}
 
