--- a/app/nginx.tmpl
+++ b/app/nginx.tmpl
@@ -166,10 +166,12 @@ server {
 {{ if (and (exists "/etc/nginx/certs/default.crt") (exists "/etc/nginx/certs/default.key")) }}
 server {
 	server_name _; # This is just an invalid value which will never trigger on a real hostname.
-	listen {{ $external_https_port }} ssl http2;
+	listen {{ $external_https_port }} ssl;
+	http2 on;
 
 	{{ if $enable_ipv6 }}
-	listen [::]:{{ $external_https_port }} ssl http2;
+	listen [::]:{{ $external_https_port }} ssl;
+	http2 on;
 	{{ end }}
 
 	{{ if (exists "/etc/nginx/vhost.d/catchall") }}
@@ -291,9 +293,12 @@ server {
 
 server {
 	server_name {{ $host }};
-	listen {{ $external_https_port }} ssl http2 {{ $default_server }};
+	listen {{ $external_https_port }} ssl {{ $default_server }};
+	http2 on;
+
 	{{ if $enable_ipv6 }}
-	listen [::]:{{ $external_https_port }} ssl http2 {{ $default_server }};
+	listen [::]:{{ $external_https_port }} ssl {{ $default_server }};
+	http2 on;
 	{{ end }}
 	{{ $access_log }}
 
@@ -420,9 +425,12 @@ server {
 {{ if (and (not $is_https) (exists "/etc/nginx/certs/default.crt") (exists "/etc/nginx/certs/default.key")) }}
 server {
 	server_name {{ $host }};
-	listen {{ $external_https_port }} ssl http2 {{ $default_server }};
+	listen {{ $external_https_port }} ssl {{ $default_server }};
+	http2 on;
+
 	{{ if $enable_ipv6 }}
-	listen [::]:{{ $external_https_port }} ssl http2 {{ $default_server }};
+	listen [::]:{{ $external_https_port }} ssl {{ $default_server }};
+	http2 on;
 	{{ end }}
 	{{ $access_log }}
 
